err/atreal.massloader.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/atreal'...
Listing './lib/python3.5/site-packages/atreal/massloader'...
Compiling './lib/python3.5/site-packages/atreal/massloader/adapter.py'...
***   File "./lib/python3.5/site-packages/atreal/massloader/adapter.py", line 99
    '20')) * 1000000L
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/atreal/massloader/browser'...
Listing './lib/python3.5/site-packages/atreal/massloader/locales'...
Listing './lib/python3.5/site-packages/atreal/massloader/locales/de'...
Listing './lib/python3.5/site-packages/atreal/massloader/locales/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/atreal/massloader/locales/fr'...
Listing './lib/python3.5/site-packages/atreal/massloader/locales/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/atreal/massloader/locales/nl'...
Listing './lib/python3.5/site-packages/atreal/massloader/locales/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/atreal/massloader/profiles'...
Listing './lib/python3.5/site-packages/atreal/massloader/profiles/default'...
Listing './lib/python3.5/site-packages/atreal.massloader-3.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pylzma-0.4.9.post0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
